Version 0.24.8
--------------

- Fix incorrect export of dashed lines (issue #142).
- Export splitting layers on multiple files (issue #154).
- Fix Inverted filter symbols (issue #153).
- Enter image size when exporting in bitmap format (issue #147).
- The arrow length and half widths may be floating point (issue #111).
- Increase precision of arrows (issue #172).

Version 0.24.7
--------------
(April 26, 2017)
- Improvement of the building tools and scripts.
- Improved backwards compatibility with PCB tracks with non integer size (#107).
- Increased to 10000 the number of processable tokens (#129).
- FidoCadJ stores the position of the current window (#126).
- The libraries can be hidden to increase the drawing area (#127).
- Change field color when a key is invalid while defining a new symbol (#120).
- Export towards gEDA PCB file format (#132).
- Use a bitmap image as background to draw over it (#99).
- Better user interface with high resolution monitors (#133).
- Correct export of some characters in PDF (#115).
- Correct problem in the selected objects while define a new symbol (#102)
- Correct FidoCadJ does not remember the save/open file directory (#116)
- Show invalid keys when creating new components (#120).
- Eliminate the "Export complete" message box (#117).
- Correct an issue with printing sizes (#137).

Version 0.24.6
--------------
(April 7, 2016)
- Complete review of the source code, refactoring, strict coding style policy have been adopted.
- Library "ey_libraries" is now considered as standard library.
- Implemented a complete print preview, showing margins and printable area in the page.
- Corrected Issue #21 (Color error in EPS format).
- Hand pan function is now more traditional (Issue #25).
- Corrected GitHub issue #41 (Printing margins).
- Corrected Issue #63 (Problematic code with wrong layer number).
- The "strict compatibility with FidoCAD" mode is automatically disabled each time the program is restarted (Issue #75).