@@ -7,6 +7,7 @@ Version 0.24.8
 - Enter image size when exporting in bitmap format (issue #147).
 - The arrow length and half widths may be floating point (issue #111).
 - Increase precision of arrows (issue #172).
+- Avoid that certain characters in text break the SVG export (issue #162).
 
 Version 0.24.7
 --------------
